--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>lunar</title>
-
+    <title>Lunar</title>
 
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
@@ -19,40 +18,42 @@
   </head>
 
   <body>
-   <section class="colored-section" id="title">
-     <!-- navbar -->
-     <div class="container-fluid">
-
-      <nav class="navbar navbar-expand-lg navbar-dark">
-        <a href="#">
-           <img src="lunar.jpg" alt="lunar-logo" width="50" height="50" class="d-inline-block align-text-center">
-        </a>
-        <a class="navbar-brand" href="#">LUNAR</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                  <a class="nav-link" href="#tokenomics">TOKENOMICS</a>
+    <section class="colored-section" id="title">
+      <!-- navbar -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="lunar.jpg" alt="lunar-logo" width="50" height="50" class="d-inline-block align-text-center">
+            LUNAR
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#tokenomics">TOKENOMICS</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#roadmap-carousel">ROADMAP</a>
+                <a class="nav-link" href="#roadmap-carousel">ROADMAP</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#community">COMMUNITY</a>
+                <a class="nav-link" href="#community">COMMUNITY</a>
               </li>
-          </ul>
-         </div>
-         <a class="navbar-brand" href="#">
-          <i class="fa-brands fa-telegram"></i>
-         </a>
-         <a class="navbar-brand" href="#">
-          <i class="fa-brands fa-twitter"></i>
-        </a>
-         <a href="https://uniswap.com" class="btn btn-warning" role="button">BUY</a>
+            </ul>
+            <div class="navbar-text">
+              <a class="navbar-brand" href="#">
+                <i class="fab fa-telegram"></i>
+              </a>
+              <a class="navbar-brand" href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="https://uniswap.com" class="btn btn-warning" role="button">BUY</a>
+            </div>
+          </div>
+        </div>
       </nav>
-     </div>
+
 
     <!-- title -->
     <div class="row">
